style: level-text, level-container

--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -8,7 +8,8 @@ $theme: (
   'alternative-background-color': #1B541E,
   'dark-color': #7f8c8d,
   'dark-light-color': #bdc3c7,
-  'dark-font-color': white
+  'dark-font-color': white,
+  'dark-button-color': #A1436A
 );
 
 $theme-colors: (
