add: modal levels

--- a/src/app/game/board/board.component.scss
+++ b/src/app/game/board/board.component.scss
@@ -24,8 +24,9 @@
     border-radius: 20px;
   }
 
-}
 
-.level-indicator {
-  padding: 8px 4px;
+}
+.correct-answer {
+  padding: 16px 8px;
+  margin: 4px;
 }
