--- a/src/app/game/board/board.theme.scss
+++ b/src/app/game/board/board.theme.scss
@@ -5,20 +5,13 @@
     .background {
       background-color: $alternative-background-color;
     }
+
   }
-}
 
-.level-indicator {
-  background-color: #f0f0f073;
-  border-radius: 2px;
-  padding: 8px 4px;
-
-}
-
-.arrow {
-  background-color: #f0f0f073;
-  border-radius: 2px;
-  font-size: 0.7em;
-  padding: 8px 6px;
-
+  .correct-answer {
+    background-color: #006b00;
+    border-radius: 4px;
+    text-align: center;
+    transition: all ease 0.3s;
+  }
 }
