--- a/src/app/shared/level-indicator/level-indicator.component.html
+++ b/src/app/shared/level-indicator/level-indicator.component.html
@@ -1,19 +1,20 @@
 <!-- <div *ngFor="let l of levels; let i = index">{{i}}</div> -->
 
-<div
-    class="level-container"
-
->
+<div class="level-container">
     <span
         class="arrow"
         (click)="previousLevel()"
     >
         &lt;&lt;
     </span>
-    <div class="level-text" (click)="showAllLevels()">
+    <div
+        class="level-text"
+        (click)="showAllLevels()"
+    >
         Level
         <span class="currentLevel">{{currentLevel}}</span>
-        of         {{maxLevel}}
+
+        of {{maxLevel}}
     </div>
     <span
         class="arrow arrow_right"
@@ -22,7 +23,10 @@
         &gt;&gt;
     </span>
 
-    <div class="modalLevels" *ngIf="modalLevels">
-        <span *ngFor="let l of levels;let i = index">{{i}}</span>
+    <!-- *ngIf="modalLevels" -->
+    <div
+        class="modal-levels"
+    >
+        <div *ngFor="let l of levels;let i = index" class="modal-item">{{i+1}}</div>
     </div>
 </div>
