--- a/src/app/shared/level-indicator/level-indicator.component.scss
+++ b/src/app/shared/level-indicator/level-indicator.component.scss
@@ -15,6 +15,23 @@
   margin-left: 5px;
   margin-right: 5px;
 }
+.modal-levels {
+  width: 190px;
+  display: flex;
+  margin-top: 10px;
+  flex-wrap: wrap;
+  padding: 12px;
+  position: absolute;
+}
+.modal-item {
+  padding: 4px;
+  margin: 4px;
+  height: 32px;
+  width: 32px;
+  justify-content: center;
+  align-items: center;
+}
+
 
 
 
