--- a/src/app/shared/level-indicator/level-indicator.theme.scss
+++ b/src/app/shared/level-indicator/level-indicator.theme.scss
@@ -15,7 +15,6 @@
       background-color: $dark-button-color;
       font-size: 1em;
       font-weight: bold;
-
     }
 
     .arrow:hover {
@@ -27,9 +26,25 @@
     }
 
     .currentLevel {
-      color: #b8ebfa;
+      color: #e6fcfb;
       font-weight: bold;
-      font-size: 1.2em;
+      font-size: 1.3em;
+    }
+
+    .modal-levels {
+      background-color: #2c3e50;
+      border-radius: 4px;
+    }
+
+    .modal-item {
+      border-radius: 50%;
+      background-color: #00974c;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    .modal-item:hover {
+      background-color: #003a1d;
     }
   }
 }
