--- a/src/app/shared/level-indicator/level-indicator.component.scss
+++ b/src/app/shared/level-indicator/level-indicator.component.scss
@@ -18,7 +18,7 @@
 .modal-levels {
   width: 190px;
   display: flex;
-  margin-top: 10px;
+  margin-top: 40px;
   flex-wrap: wrap;
   padding: 12px;
   position: absolute;
@@ -31,7 +31,15 @@
   justify-content: center;
   align-items: center;
 }
-
+.close-modal{
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: center;
+}
+.close-button{
+  padding: 4px 8px;
+}
 
 
 
